# qt.xcursor-viewer

./: CMakeLists.txt  README.md  dialog.cpp  dialog.h  dialog.ui
cmake/: SparkDesktopMacros.cmake  spark-deb-package.descript  spark-desktop.desktop.in
